--- a/NotAuthorized/location.html
+++ b/NotAuthorized/location.html
@@ -74,21 +74,20 @@
     </section>
     <section class=" map theme-specialElement">
       <div class="text">
-        <h1 data-i18="OurLocationInUSA" id="location" class="textH1 ">Our location in USA</h1>
-          <div class="img visibleMap">
-        <script  type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A95807406d856345eba73c97d2893c444290a9934cbe996ff770a6fd6f2be3302&amp;width=630&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-      </div>      
-        <p data-i18="OurLocationInUSADif" class="textP">
+        <h1 data-i18="OurLocationInUSA" id="location" class="textH1 textMap ">Our location in USA</h1>  
+        <div class="unvisibleMap">
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A95807406d856345eba73c97d2893c444290a9934cbe996ff770a6fd6f2be3302&amp;width=320&amp;height=323&amp;lang=ru_RU&amp;scroll=true"></script>
+       </div>    
+        <p data-i18="OurLocationInUSADif" class="textP textMap">
           We like to keep things simple and authentic. We’ve sourced the very
           best from the very best, from our Poitou-Charentes butter to our
           Valrhona chocolate batons.
         </p>
       </div>
-      <div class="unvisibleMap">
-        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A95807406d856345eba73c97d2893c444290a9934cbe996ff770a6fd6f2be3302&amp;width=320&amp;height=323&amp;lang=ru_RU&amp;scroll=true"></script>
-      </div>
-      
-      </section>
+      <div class="img visibleMap">
+        <script  type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A95807406d856345eba73c97d2893c444290a9934cbe996ff770a6fd6f2be3302&amp;width=630&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+      </div> 
+     </section>
     </section>
     <section class="section theme-element">                          
           <img class="img" src="..\Images\aboutUs2.png" alt="" /> 
