fix: change adaptive layout at 320px

--- a/NotAuthorized/WhoIsTarta.html
+++ b/NotAuthorized/WhoIsTarta.html
@@ -81,12 +81,10 @@
             everyone, regardless of their dietary needs.
           </p>
         </div>
-        <img class="img dayPhoto" src="..\Images\6-3.png" alt="" />
-        <img class="img nightPhoto" src="..\Images\6-1.png" alt="" />
+        <img class="img" src="..\Images\6-3.png" alt="" />
       </div>
       <div class="div2">
-        <img class="img dayPhoto" src="..\Images\6-2.png" alt="" />
-        <img class="img nightPhoto" src="..\Images\6-3.png" alt="" />
+        <img class="img" src="..\Images\6-2.png" alt="" />
         <div>
           <h3 data-i18="PreservingNature">Preserving Nature for Future Generations</h3>
           <p data-i18="PreservingNatureDif" class="p2">
@@ -108,8 +106,7 @@
             meets our high standards of taste, safety, and ethics.
           </p>
         </div>
-        <img class="img dayPhoto" src="..\Images\6-1.png" alt="" />
-        <img class="img nightPhoto" src="..\Images\6-2.png" alt="" />
+        <img class="img" src="..\Images\6-1.png" alt="" />
       </div>
     </section>
 
