--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -80,8 +80,8 @@
           every time. We’ve done the tricky bits so all you need to do is roll,
           proof and bake!
         </p>
-        <button data-i18="Catalog" class="button1 theme-button">
-          <a href="..\Tarla\catalog.html">Catalog</a>
+        <button  class="button1 theme-button">
+          <a class="theme-specialElement" data-i18="Catalog" href="..\Tarla\catalog.html">Catalog</a>
         </button>
       </div>
       <div class="swiper mySwiper img1">
@@ -144,8 +144,8 @@
           </p>
         </div>
       </div>
-      <button data-i18="ReadMore" class="button2 theme-button">
-        <a href="..\Tarla\catalog.html">Read more</a>
+      <button  class="button2 theme-button">
+        <a class="theme-element" data-i18="ReadMore" href="..\Tarla\catalog.html">Read more</a>
       </button>
     </section>
     <section class="section3 theme-element">
@@ -156,8 +156,8 @@
           pastries on your plates, and never needing to get out of your PJs.
         </p>
         <img class="img3UnVisible" src="..\Images\img3.png" alt="" />
-        <button data-i18="FreshPastryKits" class="button2 theme-blueButton">
-          <a href="..\Tarla\catalog.html">Shop pastry kits</a>
+        <button  class="button2 theme-blueButton">
+          <a data-i18="FreshPastryKits" href="..\Tarla\catalog.html">Shop pastry kits</a>
         </button>
       </div>
     </section>
@@ -168,48 +168,48 @@
           <img class="img4" src="..\Images\3-1.png" alt="" />
           <p data-i18="AllButter" class="p4_2">All-Butter Croissant</p>
           <p data-i18="KitOf6" class="p4_3">Kit of 6 - £13.50</p>
-          <button data-i18="Information" class="button4 theme-blueButton">
-            <a href="..\Tarla\catalog.html">Information</a>
+          <button  class="button4 theme-blueButton">
+            <a data-i18="Information" href="..\Tarla\catalog.html">Information</a>
           </button>
         </div>
         <div>
           <img class="img4" src="..\Images\3-2.png" alt="" />
           <p data-i18="Almond" class="p4_2">Almond Croissant</p>
           <p data-i18="KitOf6" class="p4_3">Kit of 6 - £13.50</p>
-          <button data-i18="Information" class="button4 theme-blueButton">
-            <a href="..\Tarla\catalog.html">Information</a>
+          <button  class="button4 theme-blueButton">
+            <a data-i18="Information" href="..\Tarla\catalog.html">Information</a>
           </button>
         </div>
         <div>
           <img class="img4" src="..\Images\3-3.png" alt="" />
           <p data-i18="Raspberry" class="p4_2">Raspberry Danish</p>
           <p data-i18="KitOf6" class="p4_3">Kit of 6 - £13.50</p>
-          <button data-i18="Information" class="button4 theme-blueButton">
-            <a href="..\Tarla\catalog.html">Information</a>
+          <button  class="button4 theme-blueButton">
+            <a data-i18="Information"href="..\Tarla\catalog.html">Information</a>
           </button>
         </div>
         <div class="visible">
           <img class="img4" src="..\Images\3-4.png" alt="" />
           <p data-i18="PainAuxPaisins" class="p4_2">Pain Aux Raisins</p>
           <p data-i18="KitOf6" class="p4_3">Kit of 6 - £13.50</p>
-          <button data-i18="Information" class="button4 theme-blueButton">
-            <a href="..\Tarla\catalog.html">Information</a>
+          <button  class="button4 theme-blueButton">
+            <a data-i18="Information"href="..\Tarla\catalog.html">Information</a>
           </button>
         </div>
         <div class="visible">
           <img class="img4" src="..\Images\3-5.png" alt="" />
           <p data-i18="Apricot" class="p4_2">Apricot Danish</p>
           <p data-i18="KitOf6" class="p4_3">Kit of 6 - £13.50</p>
-          <button data-i18="Information" class="button4 theme-blueButton">
-            <a href="..\Tarla\catalog.html">Information</a>
+          <button  class="button4 theme-blueButton">
+            <a data-i18="Information"href="..\Tarla\catalog.html">Information</a>
           </button>
         </div>
         <div class="visible">
           <img class="img4" src="..\Images\3-6.png" alt="" />
           <p data-i18="PainAuChocolate" class="p4_2">Pain Au Chocolat</p>
           <p data-i18="KitOf6" class="p4_3">Kit of 6 - £13.50</p>
-          <button data-i18="Information" class="button4 theme-blueButton">
-            <a href="..\Tarla\catalog.html">Information</a>
+          <button  class="button4 theme-blueButton">
+            <a data-i18="Information" href="..\Tarla\catalog.html">Information</a>
           </button>
         </div>
       </div>
