feat: added link for github, e-mail and phone

--- a/NotAuthorized/index.html
+++ b/NotAuthorized/index.html
@@ -246,15 +246,20 @@
     <section class="section8 theme-element">
       <p data-i18="JoinOurCommunity" class="H8">Join our community</p>
       <p data-i18="GetBaked" class="p8">and let's get baked</p>
-      <button data-i18="SendUsMessage" class="button8 theme-button"><a href="">Let's start</a></button>
+      <button  class="button8 theme-button"><a data-i18="SendUsMessage" href="mailto:polina.solodkova507@gmail.com">Let's start</a></button>
     </section>
     
     <footer class="footer theme-element">
-    <div class="icon">
-      <a href="tel:+375445676578"><img src="..\Images\phone.png" alt="Telephone"></a>      
-      <a href="https://github.com/MaltSun/TarlaProgect"><img src="..\Images\github.png" alt="Github"/></a>
-      <a href="polina.solodkova507@gmail.com"><img src="..\Images\e-mail.png" alt="E-mail"></a>
-    </div>
+      <div class="icon">
+        <a href="tel:+1234567890">
+        <img src="..\Images\phone.png" alt="Telephone" />
+        </a>
+        <a href="https://github.com/MaltSun/TarlaProgect"
+          ><img src="..\Images\github.png" alt="Github"/></a>
+        <a href="mailto:polina.solodkova507@gmail.com">
+         <img src="..\Images\e-mail.png" alt="E-mail" />
+      </a>      
+      </div>
 <div class="divfooter" > 
   <a data-i18="FAQ" class="link theme-element" href="..\NotAuthorized\WhoIsTarta.html">FAQ</a>
   <a  data-i18="Location" class="link theme-element" href="..\NotAuthorized\location.html">Location</a>
