--- a/NotAuthorized/location.html
+++ b/NotAuthorized/location.html
@@ -104,9 +104,14 @@
     </section>
     <footer class="footer theme-element">
       <div class="icon">
-        <img src="..\Images\phone.png" alt="Telephone">
-        <a href="https://github.com/MaltSun/TarlaProgect"><img src="..\Images\github.png" alt="Github"/></a>
-        <img src="..\Images\e-mail.png" alt="E-mail">
+        <a href="tel:+1234567890">
+        <img src="..\Images\phone.png" alt="Telephone" />
+        </a>
+        <a href="https://github.com/MaltSun/TarlaProgect"
+          ><img src="..\Images\github.png" alt="Github"/></a>
+        <a href="mailto:polina.solodkova507@gmail.com">
+         <img src="..\Images\e-mail.png" alt="E-mail" />
+      </a>      
       </div>
   <div class="divfooter" > 
     <a class="link theme-element" data-i18="FAQ"  href="..\NotAuthorized\WhoIsTarta.html">FAQ</a>
