--- a/Tarla/catalog.html
+++ b/Tarla/catalog.html
@@ -219,11 +219,14 @@
   </body>
   <footer class="footer theme-element">
     <div class="icon">
-      <a href=""><img src="..\Images\phone.png" alt="Telephone" /></a>
+      <a href="tel:+1234567890">
+      <img src="..\Images\phone.png" alt="Telephone" />
+      </a>
       <a href="https://github.com/MaltSun/TarlaProgect"
-        ><img src="..\Images\github.png" alt="Github"
-      /></a>
-      <a href=""><img src="..\Images\e-mail.png" alt="E-mail" /></a>
+        ><img src="..\Images\github.png" alt="Github"/></a>
+      <a href="mailto:polina.solodkova507@gmail.com">
+       <img src="..\Images\e-mail.png" alt="E-mail" />
+    </a>      
     </div>
     <div class="divfooter">
       <a data-i18="Tarla" class="link theme-element" href="..\Tarla\index.html">Tarla</a>
