--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -22,15 +22,23 @@
       </label>
       <ul class="menu__box theme-element">
         <li>
-          <a data-i18="headerShop" class="menu__item theme-element" href="#shop">Shop</a>
+          <a data-i18="headerShop" class="menu__item theme-element" href="#shop"
+            >Shop</a
+          >
         </li>
         <li>
-          <a data-i18="headerHowItWork" class="menu__item theme-element" href="#howItWorks"
+          <a
+            data-i18="headerHowItWork"
+            class="menu__item theme-element"
+            href="#howItWorks"
             >How it works?</a
           >
         </li>
         <li>
-          <a data-i18="headerWhoIsTarla" class="menu__item theme-element" href="#whoIsTarla"
+          <a
+            data-i18="headerWhoIsTarla"
+            class="menu__item theme-element"
+            href="#whoIsTarla"
             >Who is Tarla?</a
           >
         </li>
@@ -39,15 +47,23 @@
     <img class="logo" src="..\Images\Frame.png" alt="logo" />
     <ul class="navigation">
       <li class="li">
-        <a data-i18="headerShop" class="link theme-element" href="#shop"> Shop</a>
+        <a data-i18="headerShop" class="link theme-element" href="#shop">
+          Shop</a
+        >
       </li>
       <li class="li">
-        <a data-i18="headerHowItWork" class="link theme-element" href="#howItWorks"
+        <a
+          data-i18="headerHowItWork"
+          class="link theme-element"
+          href="#howItWorks"
           >How it works?</a
         >
       </li>
       <li class="li">
-        <a data-i18="headerWhoIsTarla" class="link theme-element" href="#whoIsTarla"
+        <a
+          data-i18="headerWhoIsTarla"
+          class="link theme-element"
+          href="#whoIsTarla"
           >Who is Tarla?</a
         >
       </li>
@@ -73,15 +89,22 @@
   <body class="body theme-element">
     <section class="section1 theme-block">
       <div class="div1">
-        <p data-i18="FreshPastryKits" class="H1 theme-block">Fresh pastry kits</p>
+        <p data-i18="FreshPastryKits" class="H1 theme-block">
+          Fresh pastry kits
+        </p>
         <p data-i18="Smells" class="P1 theme-block">
           Bringing the smells and tastes of your favourite patisserie to your
           home. Our kits have everything you need to easily make killer pastries
           every time. We’ve done the tricky bits so all you need to do is roll,
           proof and bake!
         </p>
-        <button  class="button1 theme-button">
-          <a class="theme-specialElement" data-i18="Catalog" href="..\Tarla\catalog.html">Catalog</a>
+        <button class="button1 theme-button">
+          <a
+            class="theme-specialElement"
+            data-i18="Catalog"
+            href="..\Tarla\catalog.html"
+            >Catalog</a
+          >
         </button>
       </div>
       <div class="swiper mySwiper img1">
@@ -144,8 +167,13 @@
           </p>
         </div>
       </div>
-      <button  class="button2 theme-button">
-        <a class="theme-element" data-i18="ReadMore" href="..\Tarla\catalog.html">Read more</a>
+      <button class="button2 theme-button">
+        <a
+          class="theme-element"
+          data-i18="ReadMore"
+          href="..\Tarla\catalog.html"
+          >Read more</a
+        >
       </button>
     </section>
     <section class="section3 theme-element">
@@ -156,8 +184,10 @@
           pastries on your plates, and never needing to get out of your PJs.
         </p>
         <img class="img3UnVisible" src="..\Images\img3.png" alt="" />
-        <button  class="button2 theme-blueButton">
-          <a data-i18="FreshPastryKits" href="..\Tarla\catalog.html">Shop pastry kits</a>
+        <button class="button2 theme-blueButton">
+          <a data-i18="FreshPastryKits" href="..\Tarla\catalog.html"
+            >Shop pastry kits</a
+          >
         </button>
       </div>
     </section>
@@ -168,48 +198,60 @@
           <img class="img4" src="..\Images\3-1.png" alt="" />
           <p data-i18="AllButter" class="p4_2">All-Butter Croissant</p>
           <p data-i18="KitOf6" class="p4_3">Kit of 6 - £13.50</p>
-          <button  class="button4 theme-blueButton">
-            <a data-i18="Information" href="..\Tarla\catalog.html">Information</a>
+          <button class="button4 theme-blueButton">
+            <a data-i18="Information" href="..\Tarla\catalog.html"
+              >Information</a
+            >
           </button>
         </div>
         <div>
           <img class="img4" src="..\Images\3-2.png" alt="" />
           <p data-i18="Almond" class="p4_2">Almond Croissant</p>
           <p data-i18="KitOf6" class="p4_3">Kit of 6 - £13.50</p>
-          <button  class="button4 theme-blueButton">
-            <a data-i18="Information" href="..\Tarla\catalog.html">Information</a>
+          <button class="button4 theme-blueButton">
+            <a data-i18="Information" href="..\Tarla\catalog.html"
+              >Information</a
+            >
           </button>
         </div>
         <div>
           <img class="img4" src="..\Images\3-3.png" alt="" />
           <p data-i18="Raspberry" class="p4_2">Raspberry Danish</p>
           <p data-i18="KitOf6" class="p4_3">Kit of 6 - £13.50</p>
-          <button  class="button4 theme-blueButton">
-            <a data-i18="Information"href="..\Tarla\catalog.html">Information</a>
+          <button class="button4 theme-blueButton">
+            <a data-i18="Information" href="..\Tarla\catalog.html"
+              >Information</a
+            >
           </button>
         </div>
         <div class="visible">
           <img class="img4" src="..\Images\3-4.png" alt="" />
           <p data-i18="PainAuxPaisins" class="p4_2">Pain Aux Raisins</p>
           <p data-i18="KitOf6" class="p4_3">Kit of 6 - £13.50</p>
-          <button  class="button4 theme-blueButton">
-            <a data-i18="Information"href="..\Tarla\catalog.html">Information</a>
+          <button class="button4 theme-blueButton">
+            <a data-i18="Information" href="..\Tarla\catalog.html"
+              >Information</a
+            >
           </button>
         </div>
         <div class="visible">
           <img class="img4" src="..\Images\3-5.png" alt="" />
           <p data-i18="Apricot" class="p4_2">Apricot Danish</p>
           <p data-i18="KitOf6" class="p4_3">Kit of 6 - £13.50</p>
-          <button  class="button4 theme-blueButton">
-            <a data-i18="Information"href="..\Tarla\catalog.html">Information</a>
+          <button class="button4 theme-blueButton">
+            <a data-i18="Information" href="..\Tarla\catalog.html"
+              >Information</a
+            >
           </button>
         </div>
         <div class="visible">
           <img class="img4" src="..\Images\3-6.png" alt="" />
           <p data-i18="PainAuChocolate" class="p4_2">Pain Au Chocolat</p>
           <p data-i18="KitOf6" class="p4_3">Kit of 6 - £13.50</p>
-          <button  class="button4 theme-blueButton">
-            <a data-i18="Information" href="..\Tarla\catalog.html">Information</a>
+          <button class="button4 theme-blueButton">
+            <a data-i18="Information" href="..\Tarla\catalog.html"
+              >Information</a
+            >
           </button>
         </div>
       </div>
@@ -251,29 +293,48 @@
     <section class="section8 theme-element">
       <p data-i18="JoinOurCommunity" class="H8">Join our community</p>
       <p data-i18="GetBaked" class="p8">and let's get baked</p>
-      <button data-i18="SendUsMessage" class="button8 theme-button">
-        <a href="">Send us a message</a>
+      <button class="button8 theme-button">
+        <a data-i18="SendUsMessage" href="mailto:polina.solodkova507@gmail.com"
+          >Send us a message</a
+        >
       </button>
     </section>
     <script src="changeColor.js"></script>
   </body>
   <footer class="footer theme-element">
     <div class="icon">
-      <img src="..\Images\phone.png" alt="Telephone" />
+      <a href="tel:+1234567890">
+        <img src="..\Images\phone.png" alt="Telephone" />
+      </a>
       <a href="https://github.com/MaltSun/TarlaProgect"
         ><img src="..\Images\github.png" alt="Github"
       /></a>
-      <img src="..\Images\e-mail.png" alt="E-mail" />
+      <a href="mailto:polina.solodkova507@gmail.com">
+        <img src="..\Images\e-mail.png" alt="E-mail" />
+      </a>
     </div>
     <div class="divfooter">
-      <a data-i18="FAQ" class="link theme-element" href="..\Tarla\aboutUs.html">FAQ</a>
-      <a data-i18="Location" class="link theme-element" href="..\Tarla\aboutUs.html"
+      <a data-i18="FAQ" class="link theme-element" href="..\Tarla\aboutUs.html"
+        >FAQ</a
+      >
+      <a
+        data-i18="Location"
+        class="link theme-element"
+        href="..\Tarla\aboutUs.html"
         >Location</a
       >
-      <a data-i18="Catalog" class="link theme-element" href="..\Tarla\catalog.html"
+      <a
+        data-i18="Catalog"
+        class="link theme-element"
+        href="..\Tarla\catalog.html"
         >Catalog</a
       >
-      <a data-i18="Price" class="link theme-element" href="..\Tarla\catalog.html">Prices</a>
+      <a
+        data-i18="Price"
+        class="link theme-element"
+        href="..\Tarla\catalog.html"
+        >Prices</a
+      >
     </div>
     <script src="..\Tarla\swaper.js"></script>
     <script src="..\changeLanguage.js"></script>
