fix: fixed registration

--- a/NotAuthorized/index.html
+++ b/NotAuthorized/index.html
@@ -68,7 +68,7 @@
          <a href="" class="popupClose closePopup">x</a>          
           <form id="loginForm">
             <input data-i18="Username" type="text" id="username" name="username" placeholder="Username" required>
-            <input data-i18="Password" type="password" id="password" name="password" placeholder="Password" required>
+            <input data-i18="Password" type="password" id="loginPassword" name="password" placeholder="Password" required>
            <div class="buttonDiv">
             <button data-i18="Enter" class="authorizationButton" type="submit">Enter</button>
             <button data-i18="Registration" class="authorizationButton popupRegistration" ><a href="#popup2">Registration</a>          
@@ -272,6 +272,5 @@
 <script src="..\Tarla\swaper.js"></script>
 <script src="..\changeLanguage.js"></script>
 <script src="..\changeColor.js"></script>
-<script src="..\call.js"></script>
   </footer>  
 </html>
