--- a/NotAuthorized/location.html
+++ b/NotAuthorized/location.html
@@ -128,7 +128,7 @@
          <a href="" class="popupClose closePopup">x</a>          
           <form id="loginForm">
             <input data-i18="Username" type="text" id="username" name="username" placeholder="Username" required>
-            <input data-i18="Password" type="password" id="password" name="password" placeholder="Password" required>
+            <input data-i18="Password" type="password" id="loginPassword" name="password" placeholder="Password" required>
            <div class="buttonDiv">
             <button data-i18="Enter" class="authorizationButton" type="submit">Enter</button>
             <button data-i18="Registration" class="authorizationButton popupRegistration" ><a href="#popup2">Registration</a>          
@@ -189,7 +189,10 @@
            Зарегистрироваться
            </button>
           <span class="success" id="successMessage"></span>
-      </form>
+        </form>
+      </div>
+      </div>
+    </div>
   <script src="..\Tarla\swaper.js"></script>
   <script src="..\changeLanguage.js"></script>
   <script src="popup.js"></script>   
