--- a/NotAuthorized/WhoIsTarta.html
+++ b/NotAuthorized/WhoIsTarta.html
@@ -212,7 +212,7 @@
          <a href="" class="popupClose closePopup">x</a>          
           <form id="loginForm">
             <input data-i18="Username" type="text" id="username" name="username" placeholder="Username" required>
-            <input data-i18="Password" type="password" id="password" name="password" placeholder="Password" required>
+            <input data-i18="Password" type="password" id="loginPassword" name="password" placeholder="Password" required>
            <div class="buttonDiv">
             <button data-i18="Enter" class="authorizationButton" type="submit">Enter</button>
             <button data-i18="Registration" class="authorizationButton popupRegistration" ><a href="#popup2">Registration</a>          
@@ -227,8 +227,8 @@
         <div class="popupContent">
           <h3 data-i18="Registration">Sign Up</h3>
           <a href="" class="popupClose closePopup">x</a>
-      <form id="registrationForm" class="registrationForm">
-          <div class="form-group">
+          <form id="registrationForm" class="registrationForm">
+            <div class="form-group">
               <label for="phone">Номер телефона (РБ):</label>
               <input type="text" id="phone" name="phone" placeholder="Номер телефона" required>
               <span class="error" id="phoneError"></span>
@@ -260,7 +260,7 @@
           </div>
           <div class="form-group">
               <label for="nickname">Никнейм:</label>
-              <input type="text" id="nickname" name="nickname" placeholder="Никнейм" required readonly>
+              <input type="text" id="nickname" name="nickname" placeholder="Никнейм" readonly required>
               <button type="button" id="regenerateNickname">Сгенерировать никнейм</button>
               <span class="error" id="nicknameError"></span>
           </div>
@@ -269,14 +269,12 @@
               <label for="agreement">Я прочитал(а) и согласен(а) с <a href="#">Соглашением пользователя</a></label>
               <span class="error" id="agreementError"></span>
           </div>
-          <button type="submit" class="registration">
-           Зарегистрироваться
-           </button>
+          <button type="submit" class="registration">Зарегистрироваться</button>
           <span class="success" id="successMessage"></span>
-      </form>
+        </form> 
         </div>
-      </div>
-      <script src="..\signUp.js"></script>
+      </div>  
+      <script src="..\signUp.js"></script>  
     </div>
     <script src="popup.js"></script>
   </body>
